test_scores/negative_dimers/features/P11182.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P11182.pkl.xz